--- a/FormularioViejuners.html
+++ b/FormularioViejuners.html
@@ -23,29 +23,19 @@
         <label for="male">Hombre</label><br>
         <input type="radio" id="female" name="sex">
         <label for="female">Mujer</label><br>
-        
+    
         <p><strong>Me siento viejuner</strong></p>
         <input type="checkbox">
         <label for="yes">Si</label><br>
         <input type="checkbox">
         <label for="no">No</label><br><br>
         <label for="description">Escribe algo sobre tí</label><br>
-        <input type="text" id="description" name="description" placeholder="Soy un hombre musculoso..."><br>
+        <input type="text" style="width: 300px;height: 100px;"><br>
         <input type="submit" value="Submir"><br>
         <label for="text">Correo electrónico:</label><br>
         <input type="text" id="correo" name="correo" placeholder="12345@gmail.com"><br>
-        <p>Telefono</p>
         <label for="text">Numero de telefono:</label><br>
         <input type="text" id="tel" name="tel" placeholder="678904532"><br>
-
-
-
-
     </form>
-
-
-
-
-
 </body>
 </html>
